--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,11 @@ jsonschema==2.6.0
 jupyter-core==4.4.0
 MarkupSafe==1.0
 nbformat==4.4.0
+numpy==1.13.3
+pandas==0.21.1
 pkg-resources==0.0.0
 plotly==2.2.3
+python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
 six==1.11.0
