--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ MarkupSafe==1.0
 nbformat==4.4.0
 numpy==1.13.3
 pandas==0.21.1
+pandocfilters==1.4.2
 pkg-resources==0.0.0
 plotly==2.2.3
+pypandoc==1.4
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
